# pipes

./: CMakeLists.txt
cmake/: pipes.pc.in  pipes_config.cmake.in
include/pipes/helpers/: invoke.hpp  optional.hpp
